# fps-timer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/fps/: main.rs
src/: lib.rs
