[package]
name = "fps-timer"
version = "0.1.0"
edition = "2021"
description = "A very accurate fps timer"
license = "MIT"
repository = "https://github.com/feschber/fps-timer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "fps"

[dependencies]
